# mainline

./: CHANGELOG  CMakeLists.txt  INSTALL  LICENSE  Makefile  README  TODO  config.h  configure
CMakeModules/: FindAttr.cmake  FindAvahiClient.cmake  FindBluetooth.cmake  FindDocbook.cmake  FindIconv.cmake  FindLibGcrypt.cmake  FindOpenObex.cmake  FindTcpWrap.cmake  FindXslt.cmake  MaintainerMode.cmake  UseDocbook.cmake
doc/: CMakeLists.txt  FindXmlTo.cmake  Makefile  obexpushd.xml
src/: CMakeLists.txt  Makefile  action.h  auth.h  checks.c  checks.h  closexec.h  compiler.h  data_io.c  data_io.h  fork.c  get.c  io.h  md5.c  md5.h  net.h  obex_auth.c  obex_auth.h  obexpush-sdp.c  obexpush-sdp.h  obexpush_atd.c  obexpushd.c  obexpushd.h  pipe.c  pipe.h  pthreads.c  put.c  utf.c  utf.h  version.h  version.h.in
src/action/: connect.c  core.c  core.h  disconnect.c  get.c  put.c  setpath.c  setpath.h
src/auth/: core.c  file.c
src/helper/: CMakeLists.txt  Makefile  obex-capability-app.c  obex-capability.c  obex-capability.h  obex-folder-listing.c  obex-folder-listing.h  xml_simple.h
src/io/: core.c  file.c  pipe.c  script.c
src/io/internal/: caps.c  caps.h  common.c  common.h  dir.c  dir.h  file.c  file.h
src/net/: auth.c  btobex.c  core.c  core.h  fdobex.c  fdobex.h  fdobex_ctrans.c  inobex.c  irobex.c  tcpobex.c  usbgobex.c  usbgobex.h  usbgobex_ctrans.c
src/net/publish/: avahi.c  avahi.h  sdp.c  sdp.h
src/obex_auth/: CMakeLists.txt  core.c  md5.c  md5.h  obex_auth.c  obex_auth.h
src/storage/: file_storage.sh
src/x-obex/: CMakeLists.txt  README  obex-capability-app.c  obex-capability.c  obex-capability.h  obex-folder-listing-app.c  obex-folder-listing.c  obex-folder-listing.h  xml_simple.h
trunk/doc/: CMakeLists.txt  FindXmlTo.cmake
trunk/src/: checks.c  get.c  net.h  obexpush-sdp.h  obexpushd.h  utf.c  utf.h  version.h.in
trunk/src/net/: auth.c  btobex.c  irobex.c
trunk/src/storage/: file_storage.sh
trunk/src/x-obex/: obex-capability.h  xml_simple.h
